# woogeen

./: .gitmodules  patch_xmake.sh
demo.app/: README  manifest.json
demo.app/src/: Main.js  config.json  woogeen.js
misc/: build.txt  dump_h264.diff  getToken.xhr.js  server_conf.txt
sdk-bin/: include  xmake.conf  yunos.mk
token_lib/: CMakeLists.txt  REAME.md
token_lib/src/: asio_token.cpp
videochat.app/: manifest.json  yunos.mk
videochat.app/res/default/: string.json
videochat.app/res/zh-CN/: string.json
videochat.app/src/: config.json
videochat.app/src/adapters/: ChatListAdapter.js  ParticipantAdapter.js
videochat.app/src/chatservices/: ChatManagerment.js  ChatRoomClient.js  Constants.js  MgrRoomClient.js  UserMgr.js  WebrtcConnection.js
videochat.app/src/controllers/: ChatController.js  ChatRoomController.js  ContactController.js  HomeController.js  VideoController.js
videochat.app/src/pages/: HomePage.js
videochat.app/src/utils/: ArrayUtil.js  StoreUtil.js  TimeUtil.js  ViewUtil.js  woogeen.js
woogeen/: .gclient  libwoogeen.map  src  xmake.conf  yunos.mk
woogeen/obsolete/: export.sh  woogeen.sh  xmake.conf  yunos.mk
woogeen/sample/: asio_token.h  conferencesample.cc  conferencesampleobserver.cc  conferencesampleobserver.h  yunos.mk  yunosaudioframegenerator.cc  yunosaudioframegenerator.h  yunosaudioplayer.cc  yunosaudioplayer.h
ybinding/: woogeen.idl  xmake.conf  yunos.mk
ybinding/jsmodule/: package.json  woogeen.js
ybinding/src/: bindings.cc  fileaudioframegenerator.cc  fileaudioframegenerator.h  filevideoframegenerator.cc  filevideoframegenerator.h  jsbinding.cc  jsconfclient.cc  jsconfclient.h  jsfilegenerator.h  jsstream.cc  jsstream.h  logredirector.cc  logredirector.h  rtc_logging.h  yunosaudioframegenerator.cc  yunosaudioframegenerator.h  yunosaudioframegenerator_unittest.cc  yunosaudioplayer.cc  yunosaudioplayer.h  yunosaudioplayer_unittest.cc
(+37 files in other folders)
